kubernetes/analytics/nifi/nifi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  namespace: analytics
  labels:
    app: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        task: nifi
        k8s-app: nifi
        app: nifi
    spec:
      containers:
      - name: nifi
        ports:
        - containerPort: 8080 
        image: apache/nifi
        # env:
        # - name: nifi_NOTEBOOK_DIR
        #   value: "/notebook"
        volumeMounts:
          - name: nifi-conf
            mountPath: /opt/nifi/nifi-current/conf
          - name: nifi-state
            mountPath: /opt/nifi/nifi-current/state 
          - name: nifi-database-repository
            mountPath: /opt/nifi/nifi-current/database_repository
          - name: nifi-flowfile-repository
            mountPath: /opt/nifi/nifi-current/flowfile_repository
          - name: nifi-content-repository
            mountPath: /opt/nifi/nifi-current/content_repository
          - name: nifi-provenance-repository
            mountPath: /opt/nifi/nifi-current/provenance_repository
      volumes:
        - name: nifi-conf
          persistentVolumeClaim:
            claimName: nifi-conf-claim
        - name: nifi-state
          persistentVolumeClaim:
            claimName: nifi-state-claim
        - name: nifi-database-repository
          persistentVolumeClaim:
            claimName: nifi-database-repository-claim
        - name: nifi-flowfile-repository
          persistentVolumeClaim:
            claimName: nifi-flowfile-repository-claim
        - name: nifi-content-repository
          persistentVolumeClaim:
            claimName: nifi-content-repository-claim
        - name: nifi-provenance-repository
          persistentVolumeClaim:
            claimName: nifi-provenance-repository-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: analytics
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nifi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: analytics
spec:
  rules:
  - host: nifi.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: nifi
          servicePort: 80
